# aarnphm.github.io

./: ,  ,a  .cbfmt.toml  .clang-format  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .markdownlint.yaml  .marksman.toml  .oxfmtrc.json  .oxlintrc.json  .pnpmfile.cjs  .prettierignore  .prettierrc  .ruff.toml  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README  README.md  cloudflare-build.sh  config.toml  custom_config.yml  deploy.sh  drizzle.config.ts  drizzle.flashcards.config.ts  flake.nix  globals.d.ts  go.mod  go.sum  index.d.ts  middleware.ts  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-generated.sh  (+13 more)
.claude/: launch.json  settings.json  settings.local.json
.claude/agents/: editorial-voice-writer.md  math-prover.md  p0-compiler.md  researcher.md
.claude/commands/: add-description.md  add-places-description.md  cf-worker-task.md  content-note.md  dialectic.md  quartz-emitter.md  quartz-transformer.md  revise-grammar.md  truthful.md
.github/: README.md  dependabot.yml  post-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yaml  codeql.yml  deploy.yaml  docker-build-push.yaml
@types/micromorph/: index.d.ts
api/: [...path].ts  arxiv.ts  curius.ts  file.ts  raw.ts  redirect.ts
api/raw/: [...path].ts
app/: layout.tsx
archetypes/: cache.md
assets/js/: clipboard.js  code-title.js  popover.js  router.js  semantic-search.js  util.js
assets/styles/: _callouts.scss  base.scss  overrides.scss  syntax.scss
content/: .moxide.toml  .obsidian.vimrc  References.bib  _index.md  advent.html  antilibrary.base  are.na.md  arena-sample.md  backburners.md  books.md  cheatsheet.md  cinematheque.base  colophon.md  consult.md  cool.md  curius.md  dating.md  dnd.md  friends.md  ideas.base  ideas.md  images.md  index.md  infinite poem.md  influence.md  inspo.md  interfaces.canvas  lyd.md  lydia.md  manual.html  mixed.md  movies.md  music.md  notes.md  nytimes.md  park.html  personal canon.md  personality.md  pgp-key.txt  philosophie.canvas  (+19 more)
content/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  graph.json  hotkeys.json  page-preview.json  webviewer.json  workspace.json  workspaces.json
content/.well-known/: security.txt
content/books/: index.md
content/cache/: Autograd.md  Rust.md  Terminal.md  XLA.md  backburners.md  balancing-act.md  build-tools.md  container.md  docker.md  flatbuffer-arrow-df.md  jax-and-auto-diff.md  make-python-faster.md  projects.md  runner-interface.md  (+1 more)
content/hinterland/nanovllm/: index.md  pyproject.toml
content/hinterland/nanovllm/design/: overview.md  roadmap.md  runtime.md
content/hinterland/nanovllm/src/nanovllm/: __init__.py
content/hinterland/tinyvllm/: index.md  pyproject.toml
content/hinterland/tinyvllm/design/: overview.md  roadmap.md  runtime.md
content/hinterland/tinyvllm/src/tinyvllm/: __init__.py
content/thoughts/tsfm/lecture-2-exercise/: bench.sh  computation.py  implementation.md  index.md  pyproject.toml
content/thoughts/tsfm/lecture-2-exercise/rust/fastbpe/: Cargo.toml
content/thoughts/tsfm/lecture-2-exercise/rust/fastbpe/src/: bpe.rs  lib.rs
content/thoughts/tsfm/lecture-2-exercise/src/minibpe/: __init__.py  __main__.py  _core.pyi  bench.py  core.py  impl.py
content/thoughts/tsfm/lecture-2-exercise/src/minibpe/data/: toy_data.txt
content/thoughts/tsfm/lecture-2-exercise/src/minibpe/fineweb/: merges.txt  vocab.txt
content/thoughts/tsfm/lecture-2-exercise/src/minibpe/tinygpt-train/: merges.txt  vocab.txt
content/thoughts/tsfm/lecture-2-exercise/src/minibpe/toy/: merges.txt  vocab.txt
content/thoughts/tsfm/lecture-2-exercise/tokenization/: EncoderDecoder.py  tokenization.py
content/thoughts/tsfm/lecture-3-exercise/: index.md  main.py  pyproject.toml  reports.md  run_inference.sh  run_plot.sh  run_train.sh  test_backward_passes.py  torch_primitives.py  transformer.py
content/thoughts/tsfm/lecture-3-exercise/src/minigpt/np/: ascii_losses.py  ds.py  inference.py  modular.py  smoke.py  torch_primitives.py  train.py
content/thoughts/tsfm/lecture-3-exercise/tests/: test_backward_passes.py  test_mp_ddp_cpu.py
crates/infinijup/: Cargo.toml
crates/infinijup-cli/: Cargo.toml
crates/infinijup-cli/src/: main.rs
crates/infinijup/src/: lib.rs  meta.rs  preflight.rs  process.rs  store.rs
data/: config.yaml
docs/: 2025-lists-draft.md  2025-plan-1.md  2025-plan-2.md  arithmetic-intensity-transformer-inference-research.md  ava-friendship-maintenance.md  ava-how-do-i-meet-people-i-like.md  ava-is-friendship-romantic.md  ava-prioritize-fav-people.md  ava-radical-fun.md  bases-compiler.md  bases-implementation.md  bases-remaining-work.md  birthday-prose-research.md  build-instruction.md  collaborative-comments.md  configuration.md  d9-implementation-details.md  dev-tui-implementation.md  finding-god-in-algorithms-research.md  friendship-world-making-research.md  helix-parallelism-deep-dive.md  hk-loving-seeing.md  hk-writing-flows.md  hosting.md  index.md  jcast-implementation.md  joecarlsmith-on-green.md  letter-research-synthesis.md  lists-2025.md  neofinalism-transhumanism-meliorism-plan.md  ofm-callout-analysis.md  refactor-comments-plan.md  sn-sun-still.md  sn-year-ecstasy.md  steph-threads.md  synergetic.md  vllm-deep-dive-research.md
functions/: _middleware.js
hack/: serve  update
layouts/: 404.html  index.html
quartz/: bootstrap-cli.mjs  bootstrap-worker.mjs  build.test.ts  build.ts  cfg.ts  embed_build.py  server.mjs  worker.ts
quartz/runtime/native/packs/ocaml/: dune  dune-project  toplevel.ml  worker.js
types/: custom.d.ts  shims.d.ts
worker/: arena-embed.test.ts  arena-embed.ts  arxiv.ts  auth.ts  comments-auth.ts  comments-github-handler.ts  comments.ts  curius.ts  flashcards.ts  github-handler.ts  index.ts  lean.ts  mcp.ts  mentions.ts  request-utils.ts  schema.ts  semantic.ts  stacked.tsx  static-assets.ts  triathlon-data.test.ts  triathlon-data.ts  tsconfig.json  utils.ts  workers-oauth-utils.ts
(+4291 files in other folders)
