[project]
name = "garden"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.9.2",
  "numpy>=2.1.2",
  "scipy>=1.14.1",
  "torch>=2.5.0",
  "jupyter>=1.1.1",
  "jupyter-client>=8.6.3",
  "jupytext>=1.16.4",
  "mypy>=1.12.1",
  "plotly>=5.24.1",
  "pnglatex>=1.1",
  "pylatexenc>=2.10",
  "pynvim>=0.5.0",
  "pyperclip>=1.9.0",
  "scikit-learn>=1.5.2",
  "pandas>=2.2.3",
  "jupyterlab-vim>=4.1.4",
  "manimgl>=1.7.1",
  "moderngl-window>=2.4.6",
]
