[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "garden"
description = "Aaron's notes"
readme = { file = ".github/README.md", content-type = "text/markdown" }
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9.2",
  "numpy>=2.1.2",
  "scipy>=1.14.1",
  "torch>=2.5.0",
  "jupyter>=1.1.1",
  "jupyter-client>=8.6.3",
  "jupytext>=1.16.4",
  "mypy>=1.12.1",
  "plotly>=5.24.1",
  "pnglatex>=1.1",
  "pylatexenc>=2.10",
  "pynvim>=0.5.0",
  "pyperclip>=1.9.0",
  "scikit-learn>=1.5.2",
  "pandas>=2.2.3",
  "jupyterlab-vim>=4.1.4",
  "manimgl>=1.7.1",
  "moderngl-window>=2.4.6",
]
dynamic = ["version"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.sdist]
only-include = ["content"]
[tool.hatch.build.targets.wheel]
packages = ["content"]
