[build-system]
requires = ["hatchling", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "garden"
description = "Aaron's notes"
readme = { file = ".github/README.md", content-type = "text/markdown" }
authors = [{ name = "Aaron Pham", email = "contact@aarnphm.xyz" }]
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9.2",
  "numpy>=2.1.2",
  "scipy>=1.14.1",
  "jupyter>=1.1.1",
  "jupyter-client>=8.6.3",
  "jupytext>=1.16.4",
  "mypy>=1.12.1",
  "plotly>=5.24.1",
  "pnglatex>=1.1",
  "pylatexenc>=2.10",
  "pynvim>=0.5.0",
  "pyperclip>=1.9.0",
  "scikit-learn>=1.5.2",
  "pandas>=2.2.3",
  "jupyterlab-vim>=4.1.4",
]
dynamic = ["version"]

[tool.uv.sources]
minibpe = { path = "content/thoughts/tsfm/lecture-2-exercise" }

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata]
allow-direct-references = true
[tool.hatch.build.targets.sdist]
only-include = ["content"]
[tool.hatch.build.targets.wheel]
packages = ["content"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
verboseOutput = true
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
reportMissingImports = 'warning'
reportMissingTypeStubs = false
deprecateTypingAliases = true
enableReachabilityAnalysis = true
enableExperimentalFeatures = true

[tool.pyright.defineConstant]
MYPY = true

[tool.mypy]
pretty = true
python_version = "3.11"
show_error_codes = true
strict = true
ignore_missing_imports = true
explicit_package_bases = true
warn_unreachable = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = ["RUF012", "ANN", "E722"]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
respect-ignore-files = true
root = "./"

[tool.ty.environment]
python = "./.venv"
python-version = "3.11"
