[package]
name = "infinijup-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "infinijup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
infinijup = { path = "../infinijup" }

