[package]
name = "infinijup"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "infinijup"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["macros", "formatting"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
nix = { version = "0.29", features = ["fs", "process"] }
sha2 = "0.10"
blake3 = "1"
zstd = "0.13"
walkdir = "2"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

