[project]
name = "tinyvllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron Pham", email = "contact@aarnphm.xyz" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tinyvllm = "tinyvllm:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
