[project]
name = "minitransformers"
version = "0.1.0"
description = "minitransformers but with numpy, and more"
readme = "index.md"
requires-python = ">=3.11"
dependencies = [
  "flax>=0.11.2",
  "jax>=0.7.1",
  "jaxlib>=0.7.1",
  "numpy>=2.3.3",
  "torch>=2.8.0",
  'vllm==0.10.2',
  "datasets",
  "pytest",
]
